src/test/deca/context/valid/Objet/ListDeclClass-PublicField.deca
// Description:
//      Accessing a public field in a class
//
// Results:
//      nothing
//
// History:
//      created on 17/1/2022

class A {
    int x;
}

{
    A a = new A();
    print(a.x);
}